--- a/JavaFXproject/bin/application/Login.fxml
+++ b/JavaFXproject/bin/application/Login.fxml
@@ -6,31 +6,35 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="158.0" prefWidth="415.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginController">
    <children>
-      <TextField fx:id="userField" layoutX="149.0" layoutY="17.0" prefHeight="30.0" prefWidth="250.0">
+      <TextField fx:id="userField" layoutX="236.0" layoutY="136.0" prefHeight="30.0" prefWidth="250.0" AnchorPane.rightAnchor="14.0">
          <font>
             <Font size="14.0" />
-         </font>
-      </TextField>
-      <TextField fx:id="passField" layoutX="149.0" layoutY="52.0" prefHeight="30.0" prefWidth="250.0">
+         </font></TextField>
+      <TextField fx:id="passField" layoutX="236.0" layoutY="185.0" prefHeight="30.0" prefWidth="250.0" AnchorPane.rightAnchor="14.0">
          <font>
             <Font size="14.0" />
-         </font>
-      </TextField>
-      <Button fx:id="okButton" layoutX="166.0" layoutY="92.0" mnemonicParsing="false" onAction="#okButtonClick" text="OK">
+         </font></TextField>
+      <Button fx:id="okButton" layoutX="54.0" layoutY="274.0" mnemonicParsing="false" onAction="#okButtonClick" text="LOGIN" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0">
          <font>
             <Font size="24.0" />
-         </font>
-      </Button>
-      <Label layoutX="14.0" layoutY="14.0" text="Username:">
+         </font></Button>
+      <Label alignment="CENTER" layoutX="14.0" layoutY="134.0" prefHeight="35.0" prefWidth="150.0" text="Username:" AnchorPane.leftAnchor="14.0">
          <font>
             <Font size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="14.0" layoutY="49.0" text="Password:">
+         </font></Label>
+      <Label alignment="CENTER" layoutX="14.0" layoutY="183.0" prefHeight="35.0" prefWidth="150.0" text="Password:" AnchorPane.leftAnchor="14.0">
          <font>
             <Font size="24.0" />
+         </font></Label>
+      <Button fx:id="registerButton" layoutX="312.0" layoutY="299.0" mnemonicParsing="false" onAction="#registerButtonClick" text="REGISTER" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0">
+         <font>
+            <Font size="24.0" />
+         </font></Button>
+      <Label alignment="CENTER" layoutX="210.0" layoutY="88.0" text="Bun venit la CarMarket!" textAlignment="JUSTIFY" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
+         <font>
+            <Font size="36.0" />
          </font>
       </Label>
    </children>
